20040413 menu_data.pl: Perl 5.6 fixup.
20040415 tape.c: when loading a block via the tape traps, we must have at
	 least DE + 2 bytes due to the flag and parity bytes.
20040415 tape.c: after successfully loading a block with tape traps, set
	 DE equal to zero as this is what happens in the ROM code.
	 Necessary for 'The Rats' to load with tape traps enabled; thanks
	 to Simon Stuart for reporting this (fixes bug #890838).
20040415 menu_data.pl,widget/{menu.c,widget.h}: fix up widget compilation
	 of the new menu code.
20040415 menu.[ch],rzx.[ch],ui/gtk/{binary.c,fileselector.c,gtkinternals.h,
	 gtkui.c,roms.c},widget/menu.c: generalise more functions into
	 menu.c (GTK+ changes).
20040415 widget/{menu.c,widget.h}: generalise more functions into menu.c
	 (widget changes).
20040415 menu.[ch]: add copyright and GPL notice.
20040416 menu.[ch],ui/gtk/gtkui.c,widget/menu.c: generalise
	 menu_media_disk_insert().
20040416 keyboard.[ch],ui/gtk/gtkjoystick.c: add kludgey UI to allow
	 the joystick fire button actions to be changed.
20040419 Major memory mapping revamp (patch #932893).
20040419 printer.c: stop output to the serial printer when printer
	 emulation is disabled.
20040420 utils.c: cartridges would be lost on reset if opened with
	 File/Open (or from the command line) rather than with
	 Media/Cartridge/Insert.
20040420 dck.c,machine.c,memory.[ch],scld.[ch],utils.c,
	 machines/{spec16.c,tc2068.c}: simplify memory handling by
	 allocating all memory from a pool and then just throwing the pool
	 away on reset.
20040420 dck.c: when inserting a cartridge, change the setting only after
	 we have verified that the file loads successfully.
20040423 tape.c: further improvements to the register values after the
	 tape loading trap (patch #939572) (Darren).
20040423 machines/tc2068.c: if we couldn't load a dock file on reset
	 (its contents may have changed behind our back), just ignore it,
	 rather than cause the reset to fail (which causes Fuse to abort).