@@ -1,7 +1,8 @@
     0 MC 0000
     4 MR 0000 35
     4 MC 470c
-    8 MR 470c 82
+    7 MR 470c 82
+    7 MC 470c
     8 MC 470c
    11 MW 470c 81
 0082 0000 0000 470c 0000 0000 0000 0000 0000 0000 0000 0001
